# research-workflow-automation

./: .gitignore  README.md  Snakefile  config.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci_cd_pipeline.yml
.githup/workflows/: ci_cd_pipeline.yml
data/: processed_grid.npy
data/raw_sensors/: sensors_sample.csv
docs/: memoire.md  rapport.md
models/: pinn_weights.pth
outputs/: reference.npz  stability_report.txt
src/: deep_pinn.py  hpc_acceleration.py  numerical_core.py  stability_analysis.py  symbolic_derivation.py  symbolic_engine.py  visualisation.py
src/phd_integrator_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_core.py  test_deep_pinn.py  test_hpc_acceleration.py  test_numerical_core.py  test_stability_analysis.py  test_symbolic.py  test_symbolic_derivation.py  test_visualisation.py
